--- a/seminar/sac_report/main.tex
+++ b/seminar/sac_report/main.tex
@@ -363,6 +363,23 @@
     \end{figure}
 \end{frame}
 
+\begin{frame}{Change of variables (Numerically unstable issue)}
+    Actually, my first version of CoV implementation is below, which leads to numerical unstable issue (NaN occurs)
+
+    \begin{columns}
+    \begin{column}{0.50\textwidth}
+        \begin{figure}
+            \includegraphics[width=1.0\textwidth]{UnstableCoV.png}
+        \end{figure}
+    \end{column}
+    \begin{column}{0.57\textwidth}
+        \begin{figure}
+            \includegraphics[width=1.0\textwidth]{NaNError.png}
+        \end{figure}
+    \end{column}
+    \end{columns}
+\end{frame}
+
 % \begin{frame}{Reproducibility}
 %     In RTX-3060 GPU, in default setting, F.Linear operation doesn't guarantee reproducibility
 %     \begin{columns}
